[metadata]
name = casanovo
author = Melih Yilmaz
author_email = melih@cs.washington.edu 
description = De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Noble-Lab/casanovo
project_urls =
    Documentation = https://casanovo.readthedocs.io
    Bug Tracker = https://github.com/Noble-Lab/casanovo/issues
    Discussion Board = https://github.com/Noble-Lab/casanovo/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    depthcharge-ms @ git+https://github.com/wfondrie/depthcharge@b192557e8109c211690e6fc5e5438189e96ca826
    numpy
    pandas
    scikit-learn
    torch>=1.9 
    pytorch-lightning==1.5.10
    spectrum_utils
    click
    pytest

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    pydata-sphinx-theme>=0.4.3
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    casanovo = casanovo.casanovo:main
