[metadata]
name = Casanovo
author = Melih Yilmaz
author_email = melih@cs.washington.edu
description = De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Noble-Lab/casanovo
project_urls =
    Documentation = https://casanovo.readthedocs.io
    Bug Tracker = https://github.com/Noble-Lab/casanovo/issues
    Discussion Board = https://github.com/Noble-Lab/casanovo/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    depthcharge-ms @ git+https://github.com/wfondrie/depthcharge@75fad7df9869572290ec79ec6a67d5d329b7a6c7
    numpy
    pandas
    psutil
    pytorch-lightning
    scikit-learn
    spectrum_utils
    torch>=1.9

[options.extras_require]
docs =
    ipykernel>=5.3.0
    nbsphinx>=0.7.1
    numpydoc>=1.0.0
    pydata-sphinx-theme>=0.4.3
    recommonmark>=0.5.0
    sphinx-argparse>=0.2.5
dev =
    black>=19.10b0
    pre-commit>=2.7.1
    ppx
    pyteomics
    pytest
    requests

[options.entry_points]
console_scripts =
    casanovo = casanovo.casanovo:main
