[metadata]
name = casanovo
author = Melih Yilmaz
author_email = melih@cs.washington.edu
description = De Novo Mass Spectrometry Peptide Sequencing with a Transformer Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Noble-Lab/casanovo
project_urls =
    Documentation = https://casanovo.readthedocs.io
    Bug Tracker = https://github.com/Noble-Lab/casanovo/issues
    Discussion Board = https://github.com/Noble-Lab/casanovo/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    appdirs
    click
    depthcharge-ms>=0.1.0
    natsort
    numpy
    pandas
    psutil
    PyGithub
    pytorch-lightning>=1.7,<2.0
    PyYAML
    requests
    scikit-learn
    spectrum_utils
    tensorboard
    torch>=1.9
    tqdm

[options.extras_require]
docs =
    sphinx>=4.5.0
    myst-parser>=0.18.1
    sphinx-book-theme>=0.3.3
dev =
    black>=19.10b0
    pre-commit>=2.7.1
    ppx
    psims
    pyteomics
    pytest
    requests

[options.entry_points]
console_scripts =
    casanovo = casanovo.casanovo:main
